# cideMOD

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.rst  copyright.txt  install_required_packages.sh  pytest.ini  requirements.txt  setup.cfg
data/data_Ai_2020/: OCV_G_Rieger.txt  OCV_LCO_Rieger.txt  T_0.5C_Rieger.txt  params.json  params_LAM.json  thick_0.5C_Rieger.txt  thick_2C_Rieger.txt
data/data_Chen_2020/: OCV_Anode_Chen.txt  V_1C_Chen.txt  params.json  params_tuned.json  params_tuned_vOCPexpression.json
data/data_Safari_2009/: OCV_G.txt  OCV_LCO.txt  SEI_resistance_dl.txt  SEI_resistance_rl.txt  capacity_loss_cycling.txt  capacity_loss_ocv.txt  params.json  params_OCV.json  params_cycling.json  params_cycling_lumped.json  params_cycling_lumped_total_SEI.json
data/data_Xu_2014/: T_0.5C_Xu.txt  T_1C_Xu.txt  V_0.5C_Xu.txt  V_1C_Xu.txt  params.json
data/data_Xu_2015/: OCV_G.txt  OCV_LFP.txt  T_2C_Xu.txt  V_2C_Xu.txt  dOCP_dT_G.txt  dOCP_dT_LFP.txt  params.json
data/data_dfn_94/: ocp_G.txt  ocp_LMnO.txt  params.json
docker/: Dockerfile
docs/source/: acknowledgments.rst  api.rst  authors.rst  cideMOD.bms.rst  cideMOD.helpers.rst  cideMOD.mesh.rst  cideMOD.models.base.rst  cideMOD.models.degradation.rst  cideMOD.models.electrochemical.rst  cideMOD.models.mechanical.rst  cideMOD.models.particle_models.rst  cideMOD.models.rst  cideMOD.models.thermal.rst  cideMOD.numerics.rst  cideMOD.rst  citing.rst  conf.py  contact.rst  docker.rst  examples.rst  index.rst  install.rst  install_from_docker.rst  install_from_source.rst  intro.rst  refs.bib  (+5 more)
examples/: Chen.ipynb  Safari.ipynb  Safari_storage_dl.csv  Safari_storage_rl.csv  cycling.py  main.py  pybamm_Chen.ipynb  storage.py
tests/: helpers_pytest.py  helpers_testplans.py  parallel_mesh_restriction.py  test_Ai_2020.py  test_Chen_2020.py  test_LAM.py  test_SEI.py  test_dfx.py  test_petsc_options.py  test_thermal_p2D.py
(+299 files in other folders)
