[metadata]
name = cideMOD
version = 0.1
license = AGPL-3.0
description = An X-dimensional continuous battery model
long_description = file: README.rst
author = Raul Ciria Aylagas
author_email = rciria@cidetec.es

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pydantic
   gmsh == 4.8
   pygmsh
   meshio
   appdirs

[options.packages.find]
where=src

[isort]
profile=black
known_fenics=dolfin,multiphenics
sections=FENICS,FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
