[metadata]
name = cideMOD
version = 1.0.0
license = AGPL-3.0
description = An X-dimensional continuous battery model
long_description = file: README.rst
author = CIDETEC
author_email = cideMOD@cidetec.es

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pydantic
   gmsh
   pygmsh
   meshio
   appdirs

[options.packages.find]
where=src

[isort]
profile=black
known_fenics=dolfin,multiphenics
sections=FENICS,FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
