[metadata]
name = cideMOD
version = 2.0.0
license = AGPL-3.0
description = An X-dimensional continuous battery model
long_description = file: README.rst
author = CIDETEC
author_email = cidemod@cidetec.es

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   scipy
   numpy
   gmsh
   pygmsh
   meshio
   appdirs
   tabulate
   matplotlib
   plotly
   pandas
   ipykernel
   pytest
   pydantic==1.10.11
   nbconvert==6.3.0
   jupyter-server==1.12.1
   jupyterlab-pygments==0.1.2
   ipywidgets==7.6.5
   jupyterlab-widgets==1.0.2

[options.packages.find]
where=src

[isort]
profile=black
known_fenics=dolfinx,multiphenicsx
sections=FENICS,FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
